--- a/flutter_google_places_sdk/example/android/app/build.gradle
+++ b/flutter_google_places_sdk/example/android/app/build.gradle
@@ -5,13 +5,13 @@ plugins {
 }
 
 def localKeystoreProperties = new Properties()
-def localKeystorePropertiesFile = rootProject.file('C:\\dev\\upload_key\\local-key.properties')
-localKeystoreProperties.load(new FileInputStream(localKeystorePropertiesFile))
+// def localKeystorePropertiesFile = rootProject.file('C:\\dev\\upload_key\\local-key.properties')
+// localKeystoreProperties.load(new FileInputStream(localKeystorePropertiesFile))
 
 android {
     namespace 'com.msh.flutter_google_places_sdk_example'
-    compileSdkVersion 34
-    ndkVersion "26.1.10909125"
+    compileSdkVersion 36
+    ndkVersion "28.2.13676358"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
