--- a/flutter_google_places_sdk/pubspec.yaml
+++ b/flutter_google_places_sdk/pubspec.yaml
@@ -10,7 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_google_places_sdk_platform_interface: ^0.3.4
+  flutter_google_places_sdk_platform_interface: #^0.3.4
+    git:
+        url: https://github.com/MedAliHaBloomwell/flutter_google_places_sdk.git
+        ref: 4f66e26d7bf793d976542cd1724a4b3a7f4809d8
+        path: flutter_google_places_sdk_platform_interface/
   flutter_google_places_sdk_ios: ^0.2.2
   flutter_google_places_sdk_web: ^0.2.2
   flutter_google_places_sdk_android: ^0.2.2
@@ -21,6 +25,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+dependency_overrides: 
+  flutter_google_places_sdk_platform_interface: #^0.3.4
+    git:
+        url: https://github.com/MedAliHaBloomwell/flutter_google_places_sdk.git
+        ref: 4f66e26d7bf793d976542cd1724a4b3a7f4809d8
+        path: flutter_google_places_sdk_platform_interface/
+
 
 flutter:
   plugin:
